--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Using Parcel with OpenLayers</title>
-    <style>
-      #map {
-        width: 400px;
-        height: 250px;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <script type="text/javascript" src="http://openlayers.org/api/2.13.1/OpenLayers.js"></script>
+    <title>Danish Sea Level Rise</title>
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="map"></div>
