--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <h2>Danish Sea Level Rise Impacts (WORK IN PROGRESS)</h2>
     <div id="map"></div>
     <script src="./index.js"></script>
   </body>
